added lora to travis build status emails

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ notifications:
   email:
     - adrian.warman@uk.ibm.com
     - kim@cloudant.com
+    - lbboe@us.ibm.com
   on_success: always
 before_install:
 - sudo apt-get update
