Updated metadata discovery topic and link for fb48354.

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,2 @@
-*.gem
-*.rbc
-.bundle
-.config
-coverage
-InstalledFiles
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-*.DS_STORE
-.cache
-
-# YARD artifacts
-.yardoc
-_yardoc
-doc/
-
-# couchapp!
-couchapp/_attachments
-
-# build artifacts
-build/
-/Gemfile.lock
-/.externalToolBuilders/
-/.project
+/.DS_Store
+/.gitignore
