--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ script:
 - cp -r build/* couchapp/_attachments
 - ./scripts/deploy.sh
 after_success:
-- sudo pip install cloudant beautifulsoup4
+- sudo pip install cloudant==0.5.10 beautifulsoup4
 - ./scripts/deploy-branch.sh "$USERNAME" "$PASSWORD"
