--- a/docs2017/scripts/Makefile
+++ b/docs2017/scripts/Makefile
@@ -13,6 +13,7 @@ help:
 	@echo "Please use 'make <target>' where <target> is one of"
 	@echo "  clean      to clean the build environment"
 	@echo "  html       to make all standalone (local) files, in the '$(BUILDDIR)' directory"
+	@echo "  debughtml  to do a verbose build of all standalone (local) files"
 
 .PHONY: clean
 clean:
@@ -23,3 +24,9 @@ html:
 	make clean
 	mkdir $(BUILDDIR)
 	node $(BUILDTOOL) $(MAINSRCDIR) --output=$(BUILDDIR) --header-file=$(TOOLDIR)/header --footer-file=$(TOOLDIR)/footer --conref-file=$(TOOLDIR)/conref.yml --toc-xml
+
+.PHONY: debughtml
+debughtml:
+	make clean
+	mkdir $(BUILDDIR)
+	node $(BUILDTOOL) $(MAINSRCDIR) --output=$(BUILDDIR) --header-file=$(TOOLDIR)/header --footer-file=$(TOOLDIR)/footer --conref-file=$(TOOLDIR)/conref.yml --toc-xml --verbose	
