--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ notifications:
     - adrian.warman@uk.ibm.com
     - lbboe@us.ibm.com
   on_success: always
+branches:
+  except:
+  - bluemix
 before_install:
 - sudo apt-get update
 - sudo apt-get install python python-pip jq perl aspell aspell-en curl
