Provide details of how to use the submodule capability.

--- a/docs2017/scripts/Makefile
+++ b/docs2017/scripts/Makefile
@@ -4,7 +4,8 @@
 # You can set these variables from the command line.
 BUILDDIR      = ../build
 MAINSRCDIR    = ../src
-TOOLDIR       = ../tools
+CONFIGDIR     = ../tools/
+TOOLDIR       = $(HOME)/git/github.ibm.com/Grant-Gayed
 BUILDTOOLDIR  = $(TOOLDIR)/marked-it-cli
 BUILDTOOL     = $(BUILDTOOLDIR)/bin/marked-it-cli
 WEBCONTENTDIR = /var/www/html
@@ -13,8 +14,14 @@ WEBCONTENTDIR = /var/www/html
 help:
 	@echo "Please use 'make <target>' where <target> is one of"
 	@echo "  clean      to clean the build environment"
-	@echo "  html       to make all standalone (local) files, in the '$(BUILDDIR)' directory"
+	@echo "  html       to make all standalone (local) files, in the 'BUILDDIR' directory"
 	@echo "  debughtml  to do a verbose build of all standalone (local) files"
+	@echo "  publish    to copy the locally-built HTML content to a local web server, which delivers files from 'WEBCONTENTDIR'."
+	@echo "The defined variables are:"
+	@echo "  BUILDDIR      = $(BUILDDIR)"
+	@echo "  BUILDTOOL     = $(BUILDTOOL)"
+	@echo "  TOOLDIR       = $(TOOLDIR)"
+	@echo "  WEBCONTENTDIR = $(WEBCONTENTDIR)"
 
 .PHONY: clean
 clean:
@@ -25,13 +32,13 @@ clean:
 html:
 	make clean
 	mkdir $(BUILDDIR)
-	node $(BUILDTOOL) $(MAINSRCDIR) --output=$(BUILDDIR) --extension-file=$(TOOLDIR)/headerFooterExt.js --conref-file=$(TOOLDIR)/conref.yml --toc-xml
+	node $(BUILDTOOL) $(MAINSRCDIR) --output=$(BUILDDIR) --extension-file=$(CONFIGDIR)/headerFooterExt.js --conref-file=$(CONFIGDIR)/conref.yml --toc-xml
 
 .PHONY: debughtml
 debughtml:
 	make clean
 	mkdir $(BUILDDIR)
-	node $(BUILDTOOL) $(MAINSRCDIR) --output=$(BUILDDIR) --extension-file=$(TOOLDIR)/headerFooterExt.js --conref-file=$(TOOLDIR)/conref.yml --toc-xml --verbose
+	node $(BUILDTOOL) $(MAINSRCDIR) --output=$(BUILDDIR) --extension-file=$(CONFIGDIR)/headerFooterExt.js --conref-file=$(CONFIGDIR)/conref.yml --toc-xml --verbose
 
 .PHONY: publish
 publish:
